--- a/student.ipynb
+++ b/student.ipynb
@@ -2265,20 +2265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Three Zipcodes:\n",
+      "Best Four Zipcodes:\n",
       "1. 96771 - Mean ROI: 35.9%\tBear Case: -15.45%\tBull Case: 87.25%\n",
       "2. 96763 - Mean ROI: 31.1%\tBear Case: 3.12%\tBull Case: 59.08%\n",
       "3. 96772 - Mean ROI: 28.65%\tBear Case: 1.33%\tBull Case: 55.97%\n",
       "4. 96743 - Mean ROI: 21.11%\tBear Case: 0.77%\tBull Case: 41.46%\n",
       "\n",
-      "Worst Three Zipcodes:\n",
+      "Worst Four Zipcodes:\n",
       "1. 96760 - Mean ROI: -18.33%\tBear Case: -61.3%\tBull Case: 24.64%\n",
       "2. 96779 - Mean ROI: -5.44%\tBear Case: -35.73%\tBull Case: 24.86%\n",
       "3. 96785 - Mean ROI: -4.63%\tBear Case: -47.13%\tBull Case: 37.87%\n",
@@ -2288,11 +2288,11 @@
    ],
    "source": [
     "# Print out results so I don't have to type it\n",
-    "print(\"Best Three Zipcodes:\")\n",
+    "print(\"Best Four Zipcodes:\")\n",
     "for i in [0,1,2,3]:\n",
     "    if i >= 0:\n",
     "        print(f\"{i + 1}. {roi_final.zipcode.iloc[i]} - Mean ROI: {round(roi_final.mean_roi.iloc[i]*100,2)}%\\tBear Case: {round(roi_final.lower_roi.iloc[i]*100,2)}%\\tBull Case: {round(roi_final.upper_roi.iloc[i]*100,2)}%\")\n",
-    "print(\"\\nWorst Three Zipcodes:\")\n",
+    "print(\"\\nWorst Four Zipcodes:\")\n",
     "for i in [-1,-2,-3,-4]:\n",
     "    print(f\"{-1*i}. {roi_final.zipcode.iloc[i]} - Mean ROI: {round(roi_final.mean_roi.iloc[i]*100,2)}%\\tBear Case: {round(roi_final.lower_roi.iloc[i]*100,2)}%\\tBull Case: {round(roi_final.upper_roi.iloc[i]*100,2)}%\")"
    ]
