--- a/student.ipynb
+++ b/student.ipynb
@@ -1371,9 +1371,7 @@
    "source": [
     "**Filtering out the Crash**\n",
     "\n",
-    "We are going to separate out the data from the last ten years for the initial analysis to remove the impact of the 2008 Housing crash and the volatility that followed.\n",
-    "\n",
-    "**CONSIDER ADDING A SECOND FILTER OF PERFORMANCE THROUGH THE CRASH TO PICK AREAS THAT MAY PERFORM WELL THROUGH ANOTHER CRASH**"
+    "We are not going to separate out the data from the Financial Crisis. By doing so we hope to identify homes that would retain value throughe conomic downturns."
    ]
   },
   {
